k8s/local/cargo-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cargo
spec:
  selector:
    matchLabels:
      app: cargo
  template:
    metadata:
      labels:
        app: cargo
    spec:
      containers:
      - name: cargo
        image: kimiqu/cargo-start:Build-39-CI
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "512Mi"
            cpu: "512m"
          limits:
            memory: "512Mi"
            cpu: "512m"
        livenessProbe:
          httpGet:
            path: /employee/ping
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 20
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /employee/ping
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: cargo
  labels:
    svc: cargo
spec:
  selector:
    app: cargo
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  type: ClusterIP
