k8s/local/istio-ingress.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cargo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "cargo-app.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cargo-app
spec:
  hosts:
  - "cargo-app.local"
  gateways:
  - cargo-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: cargo
